libs/api/src/test/resources/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: name
  namespace: namespace
  generateName: generateName
  labels:
    key: value
  annotations:
    key: value
  finalizers:
    - finalizer
  ownerReferences:
    - apiVersion: apiVersion
      kind: kind
      name: name
      uid: 2fade68b-1f49-403a-b5e8-4e640d3c6594
      controller: true
      blockOwnerDeletion: true
spec:
  host: www.example.com
  path: /app
  to:
    kind: Service
    name: main-service
    weight: 100
  alternateBackends:
    - kind: Service
      name: canary-service
      weight: 20
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: key
    certificate: certificate
    caCertificate: caCertificate
  wildcardPolicy: None
