libs/api/src/test/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: name
  namespace: namespace
  generateName: generateName
  labels:
    key: value
  annotations:
    key: value
  finalizers:
    - finalizer
  ownerReferences:
    - apiVersion: apiVersion
      kind: kind
      name: name
      uid: 2fade68b-1f49-403a-b5e8-4e640d3c6594
      controller: true
      blockOwnerDeletion: true
spec:
  type: LoadBalancer                  # ClusterIP | NodePort | LoadBalancer | ExternalName
  #  selector:
  #    key: value

  ports:
    - name: port
      protocol: SCTP               # TCP | UDP | SCTP
      appProtocol: https
      port: 9999
      targetPort: 8888            # int oder string
      nodePort: 7777

  clusterIP: "clusterIP"
  clusterIPs:
    - "clusterIP"
  ipFamilies: # IPv4 | IPv6
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack     # SingleStack | PreferDualStack | RequireDualStack

  externalIPs:
    - "externalIP"
  externalName: "externalName"

  externalTrafficPolicy: Local  # Cluster | Local
  internalTrafficPolicy: Local  # Cluster | Local

  allocateLoadBalancerNodePorts: false
  loadBalancerIP: "loadBalancerIP"
  loadBalancerClass: "loadBalancerClass"
  loadBalancerSourceRanges:
    - "loadBalancerSourceRange"

  sessionAffinity: None           # None | ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 30

  publishNotReadyAddresses: true

  healthCheckNodePort: 3000

  trafficDistribution: "PreferClose"
